feat(ui): create component for Sidebar

--- a/src/static/styles/tokens.css
+++ b/src/static/styles/tokens.css
@@ -29,9 +29,11 @@
   --space-8: 2rem;
   --space-9: 2.25rem;
   --space-10: 2.5rem;
+  --space-12: 3rem;
   --space-14: 3.5rem;
   --space-18: 4.5rem;
   --space-22: 5.5rem;
+  --space-24: 6rem;
   --space-26: 6.5rem;
   --space-30: 7.5rem;
   --space-34: 8.5rem;
