--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -3,30 +3,50 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: var(--space-4);
-  background-color: var(--black);
-  padding: var(--space-5);
+  gap: var(--space-10);
+  background-color: var(--white);
+  padding-right: var(--space-5);
+  padding-left: var(--space-5);
+  border-bottom: 1px solid var(--gray-100);
+}
+
+.headerLeft {
+  width: calc(20rem - var(--space-5));
+  display: flex;
+  align-items: center;
+  gap: var(--space-10);
+  padding-top: var(--space-5);
+  padding-bottom: var(--space-5);
+  border-right: 1px solid var(--gray-100);
 }
 
 .logo {
-  width: 320px;
-  display: flex;
-  gap: var(--space-5);
+  a {
+    display: flex;
+    align-items: center;
+    gap: var(--space-3);
+  }
 
   h1 {
-    color: var(--white);
-    font-size: var(--font-3xl);
+    color: var(--blue-900);
+    font-size: var(--font-2xl);
   }
 }
 
 .toggleSidebar {
+  width: 2.5rem;
+  height: 2.5rem;
   background-color: transparent;
+  padding: var(--space-3);
+  border: 1px solid var(--gray-100);
+  border-radius: var(--rounded-sm);
 }
 
-.profile {
+.avatar {
   border-radius: var(--rounded-full);
 
   img {
