--- a/src/components/Sidebar/styles.module.css
+++ b/src/components/Sidebar/styles.module.css
@@ -1,42 +1,57 @@
 .sidebar {
-  width: 320px;
+  width: 20rem;
   position: fixed;
-  top: var(--space-24);
+  top: 75px;
   bottom: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
   display: flex;
   align-items: center;
-  background-color: #0d0d0d;
+  background-color: var(--white);
   padding: var(--space-5) 0;
+  border-right: 1px solid var(--gray-100);
+  transition: left 400ms ease-in;
+}
+
+.isHidden {
+  left: -20rem;
 }
 
 .mainMenu {
   width: 100%;
+  padding-right: var(--space-5);
+  padding-left: var(--space-5);
 }
 
 .navItem {
   list-style: none;
+  margin-bottom: var(--space-2);
 
   ul {
-    .navLink {
-      padding-left: var(--space-12);
+    padding-left: var(--space-6);
+
+    .navItem {
+      margin-top: var(--space-1);
     }
   }
 }
 
 .navLink {
-  display: block;
-  color: var(--white);
-  font-size: var(--font-lg);
-  padding: var(--space-4) var(--space-8);
-  transition: all 300ms ease-in;
+  display: flex;
+  align-items: center;
+  color: var(--blue-800);
+  font-size: var(--font-sm);
+  font-weight: bold;
+  padding: var(--space-4) var(--space-6);
+  transition: all 400ms ease-in;
+  border-radius: var(--rounded-sm);
 
   &[data-active='true'] {
-    color: greenyellow;
+    background-color: var(--blue-200);
+    color: var(--blue-500);
   }
 
-  &:hover {
-    background-color: var(--black);
+  &:hover:not([data-active='true']) {
+    background-color: var(--blue-100);
   }
 }
