--- a/src/static/styles/global.css
+++ b/src/static/styles/global.css
@@ -37,8 +37,8 @@ html {
 }
 
 body {
-  background-color: var(--white);
-  color: var(--black);
+  background-color: var(--blue-50);
+  color: var(--blue-800);
   font-family: var(--font-primary);
   font-weight: var(--font-regular);
   -webkit-font-smoothing: antialiased;
@@ -51,17 +51,15 @@ img {
   display: block;
 }
 
-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  cursor: pointer;
-}
-
+button,
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+}
+
+button {
+  cursor: pointer;
 }
 
 a {
@@ -79,8 +77,7 @@ h6 {
 
 input,
 textarea,
-select,
-option {
+select {
   font-family: var(--font-primary);
   font-weight: var(--font-regular);
 }
