--- a/src/static/styles/tokens.css
+++ b/src/static/styles/tokens.css
@@ -3,6 +3,7 @@
   --white: #ffffff;
   --gray-100: #e4e7ec;
   --blue-800: #344054;
+  --blue-600: #3641f5;
   --blue-500: #465fff;
   --blue-200: #ecf3ff;
   --blue-100: #f2f4f7;
