--- a/src/components/user-card/styles.module.css
+++ b/src/components/user-card/styles.module.css
@@ -1,40 +1,54 @@
 .card {
   display: grid;
   grid-template-columns: 40% 60%;
-  background-color: #f5f5f5;
+  background-color: var(--white);
   padding: var(--space-5);
-  border-radius: var(--rounded-sm);
+  border: 1px solid var(--blue-200);
+  border-radius: var(--rounded-lg);
 }
 
 .cardAvatar {
   display: flex;
   flex-direction: column;
-  gap: var(--space-4);
-  padding-right: var(--space-8);
-  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  gap: var(--space-5);
+  padding-right: var(--space-5);
+  border-right: 1px solid var(--blue-200);
+
+  img {
+    border-radius: var(--rounded-sm);
+  }
+
+  p {
+    display: flex;
+    justify-content: space-between;
+    gap: var(--space-5);
+
+    span {
+      font-size: var(--font-sm);
+      text-align: right;
+    }
+  }
 }
 
 .cardInfo {
   display: flex;
   flex-direction: column;
-  gap: var(--space-4);
-  padding-left: var(--space-8);
+  gap: var(--space-5);
+  padding-left: var(--space-5);
 
   h3 {
     font-size: var(--font-2xl);
+    margin-top: var(--space-4);
     margin-bottom: var(--space-8);
   }
 
   p {
     display: flex;
     justify-content: space-between;
-    gap: var(--space-4);
-
-    b {
-      font-size: var(--font-lg);
-    }
+    gap: var(--space-5);
 
     span {
+      font-size: var(--font-sm);
       text-align: right;
     }
   }
@@ -47,11 +61,5 @@
   grid-column: 1 / -1;
   margin-top: var(--space-5);
   padding-top: var(--space-5);
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-
-  a {
-    background-color: var(--black);
-    color: var(--white);
-    padding: var(--space-4) var(--space-8);
-  }
+  border-top: 1px solid var(--blue-200);
 }
