--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,6 +1,6 @@
 .main {
-  margin-top: var(--space-24);
-  margin-left: 320px;
+  margin-top: 81px;
+  margin-left: 20rem;
   padding: var(--space-10) var(--space-5);
 }
 
@@ -24,9 +24,11 @@
   padding-bottom: var(--space-10);
 }
 
-.inputGroup {
+.searchInput {
   display: flex;
   align-items: center;
+  gap: var(--space-2);
+  position: relative;
 
   label {
     position: absolute;
@@ -40,25 +42,31 @@
   }
 
   input {
+    width: 25rem;
+    color: var(--blue-800);
+    font-size: var(--font-sm);
+    font-weight: var(--font-bold);
     padding: var(--space-3) var(--space-6);
-    border: 1px solid var(--black);
+    border: 1px solid var(--blue-200);
+    border-radius: var(--rounded-sm);
   }
 
   button {
-    background-color: var(--black);
-    color: var(--white);
+    height: 43px;
     padding: var(--space-3) var(--space-6);
   }
 }
 
-.newEntry {
-  background-color: var(--black);
-  color: var(--white);
-  padding: var(--space-4) var(--space-8);
-}
-
 .filter {
-  grid-column: 1 / -1;
+  max-width: 18rem;
+  display: flex;
+  align-items: center;
+  gap: var(--space-5);
+
+  & > span {
+    font-size: var(--font-lg);
+    font-weight: bold;
+  }
 }
 
 .userCards {
