--- a/src/static/styles/global.css
+++ b/src/static/styles/global.css
@@ -45,6 +45,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  overflow-x: hidden;
+}
+
 img {
   max-width: 100%;
   height: auto;
