--- a/src/components/input-group/styles.module.css
+++ b/src/components/input-group/styles.module.css
@@ -1,5 +1,6 @@
 .inputGroup {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: var(--space-2);
 }
 
@@ -11,6 +12,7 @@
 
 .inputControl,
 .selectControl {
+  width: 100%;
   height: 43px;
   background-color: var(--white);
   color: var(--blue-800);
