--- a/src/components/paginator/styles.module.css
+++ b/src/components/paginator/styles.module.css
@@ -1,8 +1,10 @@
 .pagination {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
   gap: var(--space-5);
-  margin-top: var(--space-10);
+  margin: var(--space-10) 0;
 }
 
 .paginationTotal {
@@ -11,6 +13,7 @@
 
 .paginator {
   display: flex;
+  flex-wrap: wrap;
   gap: var(--space-2);
 
   span,
