--- a/src/components/user-card/styles.module.css
+++ b/src/components/user-card/styles.module.css
@@ -1,6 +1,5 @@
 .card {
   display: grid;
-  grid-template-columns: 40% 60%;
   background-color: var(--white);
   padding: var(--space-5);
   border: 1px solid var(--blue-200);
@@ -11,8 +10,6 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-5);
-  padding-right: var(--space-5);
-  border-right: 1px solid var(--blue-200);
 
   img {
     border-radius: var(--rounded-sm);
@@ -22,6 +19,10 @@
     display: flex;
     justify-content: space-between;
     gap: var(--space-5);
+
+    b {
+      flex-shrink: 0;
+    }
 
     span {
       font-size: var(--font-sm);
@@ -34,18 +35,21 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-5);
-  padding-left: var(--space-5);
 
   h3 {
     font-size: var(--font-2xl);
-    margin-top: var(--space-4);
-    margin-bottom: var(--space-8);
+    margin-top: var(--space-8);
+    margin-bottom: var(--space-4);
   }
 
   p {
     display: flex;
     justify-content: space-between;
     gap: var(--space-5);
+
+    b {
+      flex-shrink: 0;
+    }
 
     span {
       font-size: var(--font-sm);
@@ -57,9 +61,47 @@
 .cardFooter {
   width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: center;
+  align-items: end;
   grid-column: 1 / -1;
   margin-top: var(--space-5);
   padding-top: var(--space-5);
   border-top: 1px solid var(--blue-200);
+
+  button {
+    height: 50px;
+    flex-grow: 1;
+  }
+}
+
+.cardMetadata__email {
+  word-break: break-all;
+}
+
+@media (min-width: 40rem) {
+  .card {
+    grid-template-columns: 40% 60%;
+  }
+
+  .cardAvatar {
+    padding-right: var(--space-5);
+    border-right: 1px solid var(--blue-200);
+  }
+
+  .cardInfo {
+    padding-left: var(--space-5);
+
+    h3 {
+      margin-top: var(--space-4);
+      margin-bottom: var(--space-8);
+    }
+  }
+
+  .cardFooter {
+    justify-content: end;
+
+    button {
+      flex-grow: 0;
+    }
+  }
 }
