--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,12 +1,8 @@
 .main {
   margin-top: 81px;
-  margin-left: 20rem;
+  margin-left: 0;
   padding: var(--space-10) var(--space-5);
   transition: margin 400ms ease-in;
-}
-
-.stretchMain {
-  margin-left: 0;
 }
 
 .app {
@@ -18,15 +14,13 @@
 .filterOptions {
   display: flex;
   flex-direction: column;
-  margin-bottom: var(--space-10);
 }
 
 .search {
   display: flex;
-  justify-content: space-between;
-  align-items: end;
+  flex-direction: column-reverse;
   gap: var(--space-5);
-  padding-bottom: var(--space-10);
+  margin-bottom: var(--space-10);
 }
 
 .searchInput {
@@ -47,7 +41,7 @@
   }
 
   input {
-    width: 25rem;
+    flex-grow: 1;
     color: var(--blue-800);
     font-size: var(--font-sm);
     font-weight: var(--font-bold);
@@ -67,6 +61,7 @@
   display: flex;
   align-items: center;
   gap: var(--space-5);
+  margin-bottom: var(--space-10);
 
   & > span {
     font-size: var(--font-lg);
@@ -76,20 +71,19 @@
 
 .userCards {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   gap: var(--space-5);
 }
 
 .modalCreateUser {
-  width: 600px;
-  max-height: 600px;
+  max-width: 37.5rem;
+  width: 100%;
+  max-height: calc(600px - (var(--space-10) * 2));
   margin-top: var(--space-10);
   overflow-y: auto;
 }
 
 .twoColumns {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   gap: var(--space-5);
 }
 
@@ -100,14 +94,64 @@
 
   .avatar {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     gap: var(--space-5);
+
+    img {
+      border-radius: var(--rounded-sm);
+    }
   }
 }
 
 .modalCreateUser__Footer {
   display: flex;
-  justify-content: end;
+  justify-content: center;
   gap: var(--space-5);
   margin-top: var(--space-5);
+}
+
+@media (min-width: 40rem) {
+  .search {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .searchInput {
+    input {
+      width: 20rem;
+    }
+  }
+
+  .formCreateUser {
+    .avatar {
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+
+  .twoColumns {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .modalCreateUser__Footer {
+    justify-content: end;
+  }
+}
+
+@media (min-width: 48rem) {
+  .main {
+    margin-left: var(--sidebar-width);
+  }
+
+  .stretchMain {
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 64rem) {
+  .userCards {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
